--- a/Wsei.ExchangeThings.Web/Views/Exchanges/Add.cshtml
+++ b/Wsei.ExchangeThings.Web/Views/Exchanges/Add.cshtml
@@ -2,6 +2,14 @@
 
 <h2>Add new item</h2>
 
+<div id="success-alert" class="alert alert-success" style="display: none">
+    Item added
+    successfully
+</div>
+<div id="error-alert" class="alert alert-danger" style="display: none">
+    Cannot add item : <div id="msg"></div>
+</div>
+
 <form method="POST">
     <div class="form-group">
         <label asp-for="Name">Item name</label>
@@ -23,3 +31,6 @@
     </div>
 
 </form>
+@section Scripts {
+    <!-- <script src="~/js/addNewItem.js"></script>-->
+}
